--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.6.0",
@@ -14,8 +14,6 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "openzeppelin-solidity": "^4.6.0",
-    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.5"
   }
 }
